--- a/styles/scss/_services-page.scss
+++ b/styles/scss/_services-page.scss
@@ -43,10 +43,12 @@
   border-radius: 6px;
   box-shadow: 0px 0px 5px rgba(50, 195, 108, 0.3);
   @include flex(center, center, row);
+  flex-wrap: wrap;
   text-align: center;
   color: $text-color;
   font-weight: bold;
   height: 90px;
+  // width: 50%;
   transition: 0.3s all ease;
   &:hover {
     transform: translateY(-5px);
@@ -73,7 +75,7 @@
     z-index: 1;
     transition: 0.3s all ease;
     .service-tab-modal {
-      transform: scale(1.3);
+      transform: scale(1);
     }
   }
 }
@@ -85,8 +87,10 @@
   padding: 30px;
   transition-duration: 0.8s;
   @include flex(flex-start, flex-start, column);
-  width: 350px;
-  height: 300px;
+  max-width: 350px;
+  max-height: 300px;
+  width: 90%;
+  height: 90%;
   color: $text-color;
   border-radius: 6px;
 }
@@ -114,7 +118,7 @@
   }
   .services-page-info {
     h2 {
-      font-size: 38px;
+      font-size: 34px;
     }
     p {
       font-size: 14px;
