--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -38,6 +38,7 @@
       color: #fff;
       font-size: 16px;
       transition: 0.3s all ease;
+      cursor: pointer;
       @include flex(center, flex-start, row);
       &:hover {
         color: $primary;
@@ -104,6 +105,30 @@
   }
 }
 
+.footer-modal-wrapper {
+  position: relative;
+}
+
+.footer-modal {
+  position: absolute;
+  top: 0px;
+  right: -210px;
+  background: $secondary;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  padding: 10px;
+  @include flex(flex-start,center,column);
+  gap: 5px;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.3s all ease;
+  &.active{
+    opacity: 1;
+    pointer-events: all;
+    transition: 0.3s all ease;
+  }
+}
+
 // tablet
 @media screen and (max-width: 768px) {
   .footer-inner {
@@ -155,7 +180,9 @@
       margin-bottom: 10px;
       a {
         font-size: 14px;
+        
       }
+
     }
   }
 
@@ -173,3 +200,4 @@
     }
   }
 }
+
