--- a/styles/style.css
+++ b/styles/style.css
@@ -1597,6 +1597,7 @@ body {
   font-size: 16px;
   -webkit-transition: 0.3s all ease;
   transition: 0.3s all ease;
+  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1708,6 +1709,45 @@ body {
 
 .social-links a:hover i {
   color: #00b41c;
+}
+
+.footer-modal-wrapper {
+  position: relative;
+}
+
+.footer-modal {
+  position: absolute;
+  top: 0px;
+  right: -210px;
+  background: #1a2a36;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s all ease;
+}
+
+.footer-modal.active {
+  opacity: 1;
+  pointer-events: all;
+  -webkit-transition: 0.3s all ease;
+  transition: 0.3s all ease;
 }
 
 @media screen and (max-width: 768px) {
