--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -43,6 +43,20 @@
   font-size: 16px;
 }
 
+.nav {
+  width: 100%;
+  background: #fff;
+  transition: 0.3s all ease;
+}
+
+.nav-scrolled {
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0px;
+  z-index: 30;
+  transition: 0.3s all ease;
+}
+
 .nav-logo {
   font-size: 32px;
   color: $primary;
