footer modal fix

--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -4,7 +4,7 @@
 
 .footer-inner {
   width: 100%;
-  padding: 40px;
+  padding: 80px 40px;
   color: #fff;
   @include flex(flex-start, space-between, row);
 }
@@ -111,8 +111,8 @@
 
 .footer-modal {
   position: absolute;
-  top: 0px;
-  right: -210px;
+  top: 30px;
+  left: 0px;
   background: $secondary;
   border: 1px solid #fff;
   border-radius: 6px;
