--- a/styles/scss/_global-styles.scss
+++ b/styles/scss/_global-styles.scss
@@ -22,6 +22,7 @@ html {
 body {
   animation: opening 1s ease-in-out forwards;
   scroll-behavior: smooth;
+  overflow-x: hidden !important;
 }
 
 .container {
