--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -55,7 +55,8 @@
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
   position: fixed;
   top: 0px;
-  z-index: 30;
+  left: 0px;
+  z-index: 6;
   transition: 0.3s all ease;
 }
 
