--- a/styles/scss/_breadcrumb.scss
+++ b/styles/scss/_breadcrumb.scss
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
   padding: 40px;
-
+  background: rgba(0,0,0,0.2);
   color: #fff;
   @include flex(flex-start, center, column);
   h2 {
