--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,7 @@ body {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 6;
+  z-index: 5;
   -webkit-transition: 0.3s all ease;
   transition: 0.3s all ease;
 }
@@ -192,7 +192,7 @@ body {
 }
 
 .nav-logo img {
-  height: 70px;
+  height: 60px;
 }
 
 .nav-links {
@@ -1088,22 +1088,11 @@ body {
 
 .services-body {
   width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
   gap: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .services-card {
@@ -1126,7 +1115,6 @@ body {
   overflow: hidden;
   gap: 40px;
   height: 500px;
-  width: 400px;
 }
 
 .services-card:hover .services-card-icon {
@@ -1212,6 +1200,10 @@ body {
 @media screen and (max-width: 768px) {
   .services-inner {
     padding: 40px 20px;
+  }
+  .services-body {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
   }
 }
 
@@ -1892,6 +1884,7 @@ body {
   width: 100%;
   height: 100%;
   padding: 40px;
+  background: rgba(0, 0, 0, 0.2);
   color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2256,7 +2249,7 @@ body {
 
 .feed-back-modal-wrapper.active {
   opacity: 1;
-  z-index: 1;
+  z-index: 6;
   -webkit-transition: 0.3s all ease;
   transition: 0.3s all ease;
 }
@@ -2270,7 +2263,8 @@ body {
   -webkit-transform: scale(0.3);
           transform: scale(0.3);
   max-width: 600px;
-  width: 95%;
+  width: 90%;
+  height: 90%;
   -webkit-transition-duration: 0.8s;
           transition-duration: 0.8s;
 }
