--- a/styles/scss/_slider.scss
+++ b/styles/scss/_slider.scss
@@ -40,10 +40,11 @@
 }
 
 .swiper-slide-text {
-  max-width: 60%;
+  width: 80%;
+
   color: #fff;
   h2 {
-    font-size: 72px;
+    font-size: 62px;
   }
   p {
     font-size: 20px;
@@ -74,7 +75,7 @@
     max-width: 80%;
     color: #fff;
     h2 {
-      font-size: 62px;
+      font-size: 52px;
     }
     p {
       font-size: 16px;
