--- a/styles/scss/_feed-back.scss
+++ b/styles/scss/_feed-back.scss
@@ -71,7 +71,7 @@
   transform: scale(0.3);
   max-width: 600px;
   width: 90%;
-  height: 90%;
+  // height: 90%;
   transition-duration: 0.8s;
   img {
     width: 100%;
