--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -117,12 +117,12 @@
   border: 1px solid #fff;
   border-radius: 6px;
   padding: 10px;
-  @include flex(flex-start,center,column);
+  @include flex(flex-start, center, column);
   gap: 5px;
   opacity: 0;
   pointer-events: none;
   transition: 0.3s all ease;
-  &.active{
+  &.active {
     opacity: 1;
     pointer-events: all;
     transition: 0.3s all ease;
@@ -149,6 +149,7 @@
   .footer-address {
     width: 100%;
     @include flex(center, center, column);
+    text-align: center;
   }
 }
 
@@ -180,9 +181,7 @@
       margin-bottom: 10px;
       a {
         font-size: 14px;
-        
       }
-
     }
   }
 
@@ -200,4 +199,3 @@
     }
   }
 }
-
