--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -44,19 +44,20 @@
 }
 
 .nav {
-  width: 100%;
-  background: #fff;
   transition: 0.3s all ease;
 
   top: -90px;
 }
 
 .nav-scrolled {
+  width: 100%;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
   position: fixed;
   top: 0px;
+  left: 0px;
   z-index: 30;
   transition: 0.3s all ease;
+  background: #fff;
 }
 
 .nav-logo {
