--- a/styles/scss/_services-page.scss
+++ b/styles/scss/_services-page.scss
@@ -30,6 +30,14 @@
     font-size: 16px;
     color: $text-color;
   }
+  ul {
+    margin-left: 20px;
+    li {
+      font-size: 16px;
+      color: $text-color;
+      margin-bottom: 5px;
+    }
+  }
 }
 
 .services-tabs {
@@ -122,6 +130,11 @@
     }
     p {
       font-size: 14px;
+    }
+    ul {
+      li {
+        font-size: 14px;
+      }
     }
   }
 }
